--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -1,13 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Extensions.fs" />
+    <Compile Include="MetaApi.fs" />
     <None Include="paket.references" />
     <Compile Include="DataAccess.fs" />
-    <Compile Include="Api.fs" />
+    <Compile Include="DojoApi.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
   <ItemGroup>
